<resources>
    <string name="app_name">Add Product App</string>
    <string name="add_product">Add Product</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_price">Enter Price</string>
    <string name="save">Save</string>
    <string name="a_to_z">A to Z</string>
    <string name="by_price_low_to_high">By Price low to high</string>
    <string name="by_category">By Category</string>
    <string name="name">Name :</string>
    <string name="price">Price :</string>
    <string name="category">Category :</string>
    <string-array name="Category">
        <item>Select Category</item>
        <item>Clothes</item>
        <item>Electronics</item>
        <item>Beauty</item>
    </string-array>
</resources>
