<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:layout_marginStart="10dp" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/card_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            tools:ignore="UselessParent"
            >
            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/purple_500"/>
            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Product one"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:textStyle="normal"
                android:layout_toRightOf="@+id/name_text"
                android:textColor="@color/purple_500"
                android:layout_marginStart="10dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:textStyle="normal"
                android:layout_toRightOf="@+id/price_text"
                android:textColor="@color/black"
                android:layout_marginStart="10dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:id="@+id/rel_category"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp">
            <TextView
                android:id="@+id/category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/category_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Electronics"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:textStyle="normal"
                android:layout_toRightOf="@+id/category_text"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>